--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React Graph</title>
+  <title>React/TypeScript/GraphQL</title>
 </head>
 
-<body>
+<body class="bg-white dark:bg-gray-800 text-gray-500 dark:text-white">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" class="h-screen"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
